# crewai-playground

./: .cursorrules  .gitignore  README.md  config.toml  llms_and_agents.py  main.py  pyproject.toml  report.md
knowledge/: user_preference.txt
src/app/: crew.py  main.py
src/app/config/: agents.yaml  tasks.yaml
src/app/tools/: __init__.py  text_to_speech.py  tts_tool.py
