[project]
name = "app"
version = "0.1.0"
description = "app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "openai>=1.0.0"
]

[project.scripts]
app = "app.main:run"
run_crew = "app.main:run"
train = "app.main:train"
replay = "app.main:replay"
test = "app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
